# LitSynth-MCP-Server

./: README.md  my_server.py  pyproject.toml  requirement.txt
